<resources>
    <string name="app_name">Jashn</string>
    <string name="enter_your_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="about_yourself">About Yourself</string>
    <string name="interests">Interests</string>
    <string name="save_profile">Save Profile</string>
    <string name="address">Address</string>
    <string name="facebook_app_id">777111212631959</string>
    <string name="fb_login_protocol_scheme">fb777111212631959</string>
    <string name="photo">Photo</string>
    <string-array name="event_category">
        <item>Sports</item>
        <item>Tech</item>
        <item>Business</item>
        <item>Party</item>
    </string-array>

</resources>
